--- a/LandingPage/html/index.html
+++ b/LandingPage/html/index.html
@@ -228,26 +228,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script>
-      $(".sidebar ul li").on("click", function () {
-        $(".sidebar ul li.active").removeClass("active");
-        $(this).addClass("active");
-      });
-
-      $(".open-btn").on("click", function () {
-        $(".sidebar").addClass("active");
-
-        $(".open-btn").hide();
-
-        $(".close-btn").show();
-      });
-      $(".close-btn").on("click", function () {
-        $(".sidebar").removeClass("active");
-
-        $(".close-btn").hide();
-
-        $(".open-btn").show();
-      });
-    </script>
+    <!-- Responsive Button -->
+    <script src="../js/nav.js"></script>
   </body>
 </html>
