--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="../node_modules/bootstrap-icons/font/bootstrap-icons.css" />
 
     <!-- My CSS -->
-    <link rel="stylesheet" href="landingPage/css/navbar.css" />
-    <link rel="stylesheet" href="landingPage/css/halaman1.css">
-    <link rel="stylesheet" href="landingPage/css/footer.css">
+    <link rel="stylesheet" href="LandingPage/css/navbar.css" />
+    <link rel="stylesheet" href="LandingPage/css/halaman1.css">
+    <link rel="stylesheet" href="LandingPage/css/footer.css">
   </head>
   <body>
     <!-- Navbar -->
