--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="LandingPage/asset/halaman1/rex-removebg-preview(4).png">
+    <link rel="shortcut icon" href="landingpage/asset/halaman1/rex-removebg-preview(4).png">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Rex Store</title>
     <!-- BootStrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
-    <link rel="stylesheet" href="LandingPage/node_modules/bootstrap-icons/font/bootstrap-icons.css" />
+    <link rel="stylesheet" href="landingpage/node_modules/bootstrap-icons/font/bootstrap-icons.css" />
 
     <!-- My CSS -->
-    <link rel="stylesheet" href="LandingPage/css/navbar.css" />
-    <link rel="stylesheet" href="LandingPage/css/halaman1.css">
-    <link rel="stylesheet" href="LandingPage/css/footer.css">
+    <link rel="stylesheet" href="landingpage/css/navbar.css" />
+    <link rel="stylesheet" href="landingpage/css/halaman1.css">
+    <link rel="stylesheet" href="landingpage/css/footer.css">
   </head>
   <body>
     <!-- Navbar -->
@@ -29,8 +29,8 @@
           <li class="nav-item dropdown text-light">
             <a class="nav-link dropdown-toggle py-2 px-3 d-block" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi-sd-card-fill"></i> Graphic Card</a>
             <ul class="dropdown-menu dropdown-menu-dark">
-              <li><a class="dropdown-item text-light" href="LandingPage/html/nvidia.html">Nvidia</a></li>
-              <li><a class="dropdown-item text-light" href="LandingPage/html/radeon.html">AMD Radeon</a></li>
+              <li><a class="dropdown-item text-light" href="landingpage/html/nvidia.html">Nvidia</a></li>
+              <li><a class="dropdown-item text-light" href="landingpage/html/radeon.html">AMD Radeon</a></li>
             </ul>
           </li>
 
@@ -86,7 +86,7 @@
                   <div class="jumbotron jumbotron-fluid">
                     <div class="container text-white mb-">
                       <!-- <img src="landingpage/asset/halaman1/rex-removebg-preview.png" alt="" class="w-75"> -->
-                      <h1 class="display-2 px-4"><img src="LandingPage/asset/halaman1/rex-removebg-preview(4).png" alt="" class=""> <span class="fw-bolder fst-italic rounded-pill text-dark bg-green pb-3 px-3">Rex.</span>Store</h1>
+                      <h1 class="display-2 px-4"><img src="landingpage/asset/halaman1/rex-removebg-preview(4).png" alt="" class=""> <span class="fw-bolder fst-italic rounded-pill text-dark bg-green pb-3 px-3">Rex.</span>Store</h1>
                     </div>
                   </div>
                 </div>
@@ -112,7 +112,7 @@
                     <h1 class="px-5">SAFETY STORAGE AND MAINTENANCE</h1>
                   </div>
                   <div class="col">
-                    <img src="LandingPage/asset/halaman1/toko.png" class="w-75" />
+                    <img src="landingpage/asset/halaman1/toko.png" class="w-75" />
                   </div>
                 </div>
               </div>
@@ -125,7 +125,7 @@
                 <div class="row">
                   <div class="col-2"></div>
                   <div class="col-4">
-                    <img src="LandingPage/asset/halaman1/toko2.png" class="w-100" style="border-radius: 10px;">
+                    <img src="landingpage/asset/halaman1/toko2.png" class="w-100" style="border-radius: 10px;">
                   </div>
                   <div class="col-4 d-flex flex-column align-items-center justify-content-end mb-5">
                     <h1 class="bg-green rounded px-2" style="font-size: 50px;">SECURE</h1>  
@@ -144,36 +144,36 @@
                 <div class="container">
                   <h1>NVIDIA</h1>
                   <p style="margin-top: -15px;">RTX 3000 Series</p>
-                  <img src="LandingPage/asset/halaman1/3070-ti-back-300x198.png" alt="">
-                  <img src="LandingPage/asset/halaman1/nvidia-geforce-rtx-3070.png" alt="">
-                  <img src="LandingPage/asset/halaman1/3080-ti-back-300x198.png" alt="">
-                  <img src="LandingPage/asset/halaman1/nvidia-geforce-rtx-3090-ti.png" alt="">
+                  <img src="landingpage/asset/halaman1/3070-ti-back-300x198.png" alt="">
+                  <img src="landingpage/asset/halaman1/nvidia-geforce-rtx-3070.png" alt="">
+                  <img src="landingpage/asset/halaman1/3080-ti-back-300x198.png" alt="">
+                  <img src="landingpage/asset/halaman1/nvidia-geforce-rtx-3090-ti.png" alt="">
                 </div>
                 <div class="container">
                   <h1>AMD</h1>
                   <p style="margin-top: -15px;">Radeon RX 6900 Series</p>
                 </div>
                 <div class="container">
-                  <img src="LandingPage/asset/halaman1/rx6950xt.png" alt="">
-                  <img src="LandingPage/asset/halaman1/rx6900xt.png" alt="" width="350px">
+                  <img src="landingpage/asset/halaman1/rx6950xt.png" alt="">
+                  <img src="landingpage/asset/halaman1/rx6900xt.png" alt="" width="350px">
                 </div>
                 <div class="container">
                   <p style="margin-top: px;">Radeon RX 6800 Series</p>
                 </div>
                 <div class="container">
-                  <img src="LandingPage/asset/halaman1/RX6800SERIES.png" alt="">
+                  <img src="landingpage/asset/halaman1/RX6800SERIES.png" alt="">
                 </div>
                 <div class="container">
                   <p style="margin-top: px;">Radeon RX 6700 Series</p>
                 </div>
                 <div class="container">
-                  <img src="LandingPage/asset/halaman1/RX6700SERIES.png" alt="">
+                  <img src="landingpage/asset/halaman1/RX6700SERIES.png" alt="">
                 </div>
                 <div class="container">
                   <p style="margin-top: px;">Radeon RX 6600 Series</p>
                 </div>
                 <div class="container">
-                  <img src="LandingPage/asset/halaman1/RX6600.png" alt="">
+                  <img src="landingpage/asset/halaman1/RX6600.png" alt="">
                 </div>
                 
               </div>
@@ -193,7 +193,7 @@
                     <p><a href="">Social Responsibility</a></p>
                     <p><a href="">Rex Store Foundation</a></p>
                     <p><a href="">Privacy Policy</a></p>
-                    <img src="LandingPage/asset/navbar/nvidiapartner.png" alt="">
+                    <img src="landingpage/asset/navbar/nvidiapartner.png" alt="">
                   </div>
                   <div class="col">
                     <h1>News & Promotion</h1>
@@ -204,7 +204,7 @@
                     <p><a href="">Discount</a></p>
                     <p><a href="">Events Calendar</a></p>
                     <p><a href="">NVIDIA On-Demand</a></p>
-                    <img src="LandingPage/asset/navbar/radeongraphic.png" alt="" width="120px"  class="mt-4">
+                    <img src="landingpage/asset/navbar/radeongraphic.png" alt="" width="120px"  class="mt-4">
                   </div>
                   <div class="col">
                     <h1>Get Involved</h1>
@@ -215,7 +215,7 @@
                     <p><a href="">Technicak Trainning</a></p>
                     <p><a href="">Professional Services</a></p>
                     <p><a href="">NVIDIA Partner License</a></p>
-                    <img src="LandingPage/asset/navbar/ryzenradeon.webp" alt="" width="315px">
+                    <img src="landingpage/asset/navbar/ryzenradeon.webp" alt="" width="315px">
                   </div>
                 </div>
                 </div>
@@ -229,6 +229,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!-- Responsive Button -->
-    <script src="LandingPage/js/nav.js"></script>
+    <script src="landingpage/js/nav.js"></script>
   </body>
 </html>
