--- a/landingpage/html/nvidia.html
+++ b/landingpage/html/nvidia.html
@@ -22,7 +22,7 @@
         </div>
         <ul class="list-unstyled px-2">
           <li>
-            <a href="index.html" class="text-decoration-none py-2 px-3 d-block"><i class="bi-house"></i> Dashboard</a>
+            <a href="../../index.html" class="text-decoration-none py-2 px-3 d-block"><i class="bi-house"></i> Dashboard</a>
           </li>
           <li class="nav-item dropdown text-light">
             <a class="nav-link dropdown-toggle py-2 px-3 d-block" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi-sd-card-fill"></i> Graphic Card</a>
